--- a/.github/workflows/assign_review.yaml
+++ b/.github/workflows/assign_review.yaml
@@ -6,4 +6,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: assign_review_by_comment
-        run: echo ${GITHUB_REF}; echo ${GITHUB_ENV}
+        run: echo ${GITHUB_EVENT_NAME}; echo ${GITHUB_EVENT_PATH}
