--- a/.github/workflows/assign_review.yaml
+++ b/.github/workflows/assign_review.yaml
@@ -6,4 +6,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: assign_review_by_comment
-        run: echo ${GITHUB_EVENT_NAME}; cat ${GITHUB_EVENT_PATH}
+        shell: python
+        run: |
+          import yaml
+          import os
+          from pathlib import Path
+
+          with Path(os.environ['GITHUB_EVENT_PATH']).open() as file:
+            dd = yaml.full_load(file)
+
+          print(dd['comment']['issue_url'])
+          print(dd)
