--- a/.github/workflows/assign_review.yaml
+++ b/.github/workflows/assign_review.yaml
@@ -6,6 +6,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: assign_review_by_comment
+        permissions:
+          issues: read|write
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         shell: python
