--- a/.github/workflows/assign_review.yaml
+++ b/.github/workflows/assign_review.yaml
@@ -23,6 +23,8 @@ jobs:
 
           if dd['comment']['body'].startswith('/take'):
             data = json.dumps({"assignees": [dd['comment']['user']['login']]})
+            print(data)
+            print(dd['comment']['issue_url'])
             resp = requests.post(dd['comment']['issue_url'], 
                           headers={'Authorization': f'Bearer {os.environ["GITHUB_TOKEN"]}'},
                           data=data)
