--- a/.github/workflows/assign_review.yaml
+++ b/.github/workflows/assign_review.yaml
@@ -4,6 +4,7 @@ on: [issue_comment, pull_request_review]
 jobs:
   assign_review_by_comment:
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
       - name: assign_review_by_comment
 
