--- a/.github/workflows/assign_review.yaml
+++ b/.github/workflows/assign_review.yaml
@@ -25,9 +25,15 @@ jobs:
 
           if dd['comment']['body'].startswith('/take'):
             data = json.dumps({"assignees": [dd['comment']['user']['login']]})
-            print(data)
-            print(dd['comment']['issue_url'])
             resp = requests.post(dd['comment']['issue_url'], 
                           headers={'Authorization': f'Bearer {os.environ["GITHUB_TOKEN"]}'},
                           data=data)
-            print(resp.json())
+            resp.raise_for_status()
+
+          if dd['comment']['body'].startswith('/assign'):
+            assignees = dd['comment']['body'].split(' ')[1:]
+            data = json.dumps({"assignees": assignees})
+            resp = requests.post(dd['comment']['issue_url'], 
+                          headers={'Authorization': f'Bearer {os.environ["GITHUB_TOKEN"]}'},
+                          data=data)
+            resp.raise_for_status()
