--- a/.github/workflows/assign_review.yaml
+++ b/.github/workflows/assign_review.yaml
@@ -25,7 +25,7 @@ jobs:
 
           if dd['comment']['body'].startswith('/take'):
             data = json.dumps({"assignees": [dd['comment']['user']['login']]})
-            resp = requests.post(dd['comment']['issue_url'], 
+            resp = requests.patch(dd['comment']['issue_url'], 
                           headers={'Authorization': f'Bearer {os.environ["GITHUB_TOKEN"]}'},
                           data=data)
             resp.raise_for_status()
@@ -34,7 +34,7 @@ jobs:
             assignees = dd['comment']['body'].split(' ')[1:]
             data = json.dumps({"assignees": assignees})
             print(data)
-            resp = requests.post(dd['comment']['issue_url'], 
+            resp = requests.patch(dd['comment']['issue_url'], 
                           headers={'Authorization': f'Bearer {os.environ["GITHUB_TOKEN"]}'},
                           data=data)
             resp.raise_for_status()
