--- a/.github/workflows/assign_review.yaml
+++ b/.github/workflows/assign_review.yaml
@@ -28,7 +28,7 @@ jobs:
           current_assignees = [user['login'] for user in resp.json()['assignees']]
 
           if dd['comment']['body'].startswith('/take'):
-            current_assignes.append(dd['comment']['user']['login'])
+            current_assignees.append(dd['comment']['user']['login'])
             data = json.dumps({"assignees": current_assignees})
             resp = requests.post(dd['comment']['issue_url'], 
                           headers={'Authorization': f'Bearer {os.environ["GITHUB_TOKEN"]}'},
