--- a/.github/workflows/assign_review.yaml
+++ b/.github/workflows/assign_review.yaml
@@ -46,7 +46,7 @@ jobs:
           if dd['comment']['body'].startswith('/unassign'):
             for user in [user.replace('@', '') for user in dd['comment']['body'].split(' ')[1:]]:
               if user in current_assignees:
-                current_assignees.drop(user)
+                current_assignees.remove(user)
             data = json.dumps({"assignees": assignees})
             resp = requests.post(dd['comment']['issue_url'], 
                           headers={'Authorization': f'Bearer {os.environ["GITHUB_TOKEN"]}'},
