--- a/.github/workflows/assign_review.yaml
+++ b/.github/workflows/assign_review.yaml
@@ -7,3 +7,13 @@ jobs:
     steps:
       - name: assign_review_by_comment
         run: echo ${GITHUB_REF}; echo ${GITHUB_ENV}
+      - name: Create Check Run
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          curl -L -X POST \
+           -H "Accept: application/vnd.github+json" \
+           -H "Authorization: Bearer $GH_TOKEN"\
+           -H "X-GitHub-Api-Version: 2022-11-28" \
+           https://api.github.com/repos/${{ github.repository }}/check-runs \
+           -d '{"name":"A Mighty Test", "head_sha":"${{ github.event.pull_request.head.sha }}", "status":"in_progress","output":{"title":"A Mighty Summary"}}
