--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,8 @@
 name: Assign reviewer by comment
 on: [pull_request]
 
+permissions: checks:write
+
 jobs:
   assign_review_by_comment:
     runs-on: ubuntu-latest
@@ -10,8 +12,6 @@ jobs:
           GH_TOKEN: ${{ github.token }}
         run: |
           curl -L -X POST \
-           -H "Accept: application/vnd.github+json" \
            -H "Authorization: Bearer $GH_TOKEN"\
-           -H "X-GitHub-Api-Version: 2022-11-28" \
-           https://api.github.com/repos/${{ github.repository }}/check-runs \
+           https://api.github.com/repos/loicdiridollou/gha-assign-by-comment/check-runs \
            -d '{"name":"A Mighty Test", "head_sha":"${{ github.event.pull_request.head.sha }}", "status":"in_progress","output":{"title":"A Mighty Summary"}}'
