--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,8 @@ on: [pull_request]
 
 jobs:
   assign_review_by_comment:
-    permissions: checks:write
+    permissions: 
+      checks:write
     runs-on: ubuntu-latest
     steps:
       - name: Create Check Run
