--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,9 @@
 name: Assign reviewer by comment
 on: [pull_request]
 
-
 jobs:
   assign_review_by_comment:
-    permissions: 
+    permissions:
       checks: write
     runs-on: ubuntu-latest
     steps:
@@ -15,4 +14,4 @@ jobs:
           curl -L -X POST \
            -H "Authorization: Bearer $GH_TOKEN"\
            https://api.github.com/repos/loicdiridollou/gha-assign-by-comment/check-runs \
-           -d '{"name":"A Mighty Test", "head_sha":"${{ github.event.pull_request.head.sha }}", "status":"in_progress","output":{"title":"A Mighty Summary"}}'
+           -d '{"name":"mighty_readme","head_sha":"ce587453ced02b1526dfb4cb910479d431683101","status":"completed","started_at":"2017-11-30T19:39:10Z","conclusion":"success","completed_at":"2017-11-30T19:49:10Z","output":{"title":"Mighty Readme report","summary":"There are 0 failures, 2 warnings, and 1 notices.","text":"You may have some misspelled words on lines 2 and 4. You also may want to add a section in your README about how to install your app.","annotations":[{"path":"README.md","annotation_level":"warning","title":"Spell Checker","message":"Check your spelling for '\''banaas'\''.","raw_details":"Do you mean '\''bananas'\'' or '\''banana'\''?","start_line":2,"end_line":2},{"path":"README.md","annotation_level":"warning","title":"Spell Checker","message":"Check your spelling for '\''aples'\''","raw_details":"Do you mean '\''apples'\'' or '\''Naples'\''","start_line":4,"end_line":4}],"images":[{"alt":"Super bananas","image_url":"http://example.com/images/42"}]},"actions":[{"label":"Fix","identifier":"fix_errors","description":"Allow us to fix these errors for you"}]}'
